# blinkd

./: .gitignore  CMakeLists.txt  README.md
engine/: blinkd.cpp  blinkd_ear.cpp
examples/c/: main.c
examples/cpp/: blinkd.cpp
include/: blinkd.h
integrations/godot/: blinkd.gd  blinkd.gd.uid  demo.gd  demo.gd.uid  demo.tscn  environment.tres  icon.svg.import  project.godot
metal/agnostic/: blinkd.c
src/engine/: blinkd.c
src/engine/metal/: blinkd.c
tools/: mediapipe_openness_feed.py  openness_feed_v2.py  udp_listener.py
